js/src/tests/test262/built-ins/Error/prototype/toString/15.11.4.4-6-2.js
var
errObj
=
new
Error
(
"
ErrorMessage
"
)
;
assert
.
sameValue
(
errObj
.
toString
(
)
"
Error
:
ErrorMessage
"
'
errObj
.
toString
(
)
'
)
;
reportCompare
(
0
0
)
;
